# derecrypt

./: Cargo.toml  Makefile  README.md
meta/: org.sparklet.derecrypt.desktop
src/: classes.rs  components.rs  consts.rs  lib.rs  main.rs  mods.rs  modules.rs  style.css
src/components/: blueprint.rs  mod.rs  spells.rs
src/modules/: basic.rs  mod.rs
