[package]
name = "derecrypt"
version = "2.0.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
serde_json = "1.0.120"
tinyfiledialogs = "3.9.1"
strum = "0.24.1"
strum_macros = "0.24.3"
enum_dispatch = "0.3.8"
num-traits = "0.2.15"
fancy-regex = "0.10.0"
